--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,5 +27,12 @@
   "deletePicture": "Delete picture",
   "edit": "Edit",
   "duplicate": "Duplicate",
-  "delete": "Delete"
+  "delete": "Delete",
+  "game": "Game",
+  "admin": "Admin",
+  "pickAPokemon": "Pick a Pokemon",
+  "pokedexNumber": "Pokedex number",
+  "verifyPokemon": "Vérify Pokemon",
+  "tries": "Tentatives",
+  "tryList": "Try list"
 }
